# pydre

./: .gitignore  404.html  CITATION.cff  LICENSE  NHTSA_preprocess.py  R2D_events.csv  R2D_pydre_fixes.md  R2D_reaction.csv  R2D_reaction_fixed1.csv  README.md  bioptics_output.csv  config.ini  contrib.md  ecocar_special.py  filetimes.csv  index.html  join_files.py  last.csv  main.spec  metrics_standards-ref.txt  mkdocs.yml  objects.inv  out.csv  out14.csv  output.csv  projectfileconvert.py  pydre_gui.py  pydre_merge.py  pydre_run.py  pyproject.toml  readme.md  requirements.txt  setup.py  spatial_roi.csv  test_Critical_Event.csv
Scripts/: activate  activate.bat
contrib/: index.html
developernotes/: index.html
docs/: TBI1_pf.json  box_pf.json  bushman_pf.json  contrib.md  developernotes..md  example_projectfile.json  gui.md  index.md  lanepos_pf.json  mergetool.md  metrics.md  pydre_run.md  rois.md  test_pf.json
gui/: __init__.py  __main__.py  app.py  config.py  customs.py  customs_temp.py  handlers.py  logger.py  main.py  mainwindow.ui  popups.py  templates.py  ui_mainwindow.py  windows.py
gui2/: handlers.py  templates.py  windows.py
joss/: paper.bib  paper.md  pydre-joss-article.md
mergetool/: index.html
metricStandards/: index.html
metrics/: index.html
output/: test.csv
preprocessing_tools/: NHTSA_preprocess.py  event_fail_merge.py  manual_gaze_merge.py  manual_gaze_merge_many.py  merge_tool.py  pydre_merge.py  smarteye_gaze.py
project_files/: BioValidROIs.csv  TBI1_pf.json  TBI1_pf.toml  TBI1_reaction.json  TBI1_reaction.toml  VGAD.json  (+68 more)
(+157 files in other folders)
