[project]
name = "pydre"
version = "2024.0.0"
readme = "readme.md"
dependencies = [
    "polars",
    "numpy",
    "scipy",
    "icecream",
    "tqdm",
    "loguru",
    # hope we can remove this soon
    "pandas"
]
requires-python = ">= 3.11"

[tool.setuptools]
py-modules = []

[tool.rye]
managed = true
dev-dependencies = [
    "ptpython",
    "mkdocs>=1.6.0",
    "pytest>=8.3.2",
]
