[project]
name = "pydre"
version = "24.0"
readme = "readme.md"
dependencies = [
    "polars",
    "numpy",
    "scipy",
    "icecream",
    "tqdm",
    "loguru"
]
requires-python = ">= 3.11"

[tool.setuptools]
py-modules = []

[tool.rye]
managed = true
dev-dependencies = [
    "ptpython",
    "mkdocs>=1.6.0",
    "mkdocs-material",
    "pytest>=8.3.2",
]
