[project]
name = "pydre"
version = "24.0"
readme = "readme.md"
dependencies = [
    "polars",
    "numpy",
    "scipy",
    "icecream",
    "tqdm",
    "loguru"
]
requires-python = ">= 3.11"

[project.scripts]
pydre-run = 'pydre:run.py'

[tool.rye]
managed = true
dev-dependencies = [
    "ptpython",
    "mkdocs>=1.6.0",
    "mkdocs-material",
    "mkdocstrings[python]",
    "black",
    "pytest>=8.3.2",
    "pytest-datafiles"
]

# Build System
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydre"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
